@@ -27,11 +27,15 @@ import javassist.CannotCompileException;
 import java.util.Map;
 import java.util.HashMap;
 import java.util.Arrays;
+import java.util.Collection;
 
 import java.lang.reflect.Method;
 
 import com.clarkparsia.empire.SupportsRdfId;
 import com.clarkparsia.empire.util.BeanReflectUtil;
+import static com.clarkparsia.utils.collections.CollectionUtil.find;
+import com.clarkparsia.utils.Predicate;
+import com.google.inject.internal.Sets;
 
 /**
  * <p>Generate implementations of interfaces at runtime via bytecode manipulation.</p>
@@ -41,6 +45,8 @@ import com.clarkparsia.empire.util.BeanReflectUtil;
  * @version 0.7
  */
 public class InstanceGenerator {
+
+	private static final Collection<Method> processedMethods = Sets.newHashSet();
 
 	/**
 	 * <p>Given a bean-style interface, generate an instance of the interface by implementing getters and setters for each
@@ -55,6 +61,8 @@ public class InstanceGenerator {
 	 * @throws Exception if there is an error while generating the bytecode of the new class.
 	 */
 	public static <T> Class<T> generateInstanceClass(Class<T> theInterface) throws Exception {
+		processedMethods.clear();
+
 		// TODO: can we use some sort of template language for this?
 
 		ClassPool aPool = ClassPool.getDefault();
@@ -99,7 +107,6 @@ public class InstanceGenerator {
 		aClass.addConstructor(CtNewConstructor.defaultConstructor(aClass));
 
 		generateMethods(theInterface, aPool, aClass);
-
 		generateMethodsForSuperInterfaces(theInterface, aPool, aClass);
 
 		CtField aIdField = new CtField(aPool.get(SupportsRdfId.class.getName()), "supportsId", aClass);
@@ -126,7 +133,18 @@ public class InstanceGenerator {
 
 		aClass.freeze();
 
-		return (Class<T>) aClass.toClass();
+		Class<T> aResult = (Class<T>) aClass.toClass();
+
+		try {
+			// make sure this is a valid class, that is, we can create instances of it!
+			aResult.newInstance();
+		}
+		catch (Exception ex) {
+			// TODO: log this?
+			throw ex;
+		}
+
+		return aResult;
 	}
 
 	/**
@@ -139,6 +157,11 @@ public class InstanceGenerator {
 	 * @throws CannotCompileException thrown if there is an error generating the methods
 	 */
 	private static <T> void generateMethodsForSuperInterfaces(final Class<T> theInterface, ClassPool thePool, CtClass theCtClass) throws NotFoundException, CannotCompileException {
+		if (theInterface.getSuperclass() != null) {
+			generateMethods(theInterface.getSuperclass(), thePool, theCtClass);
+			generateMethodsForSuperInterfaces(theInterface.getSuperclass(), thePool, theCtClass);
+		}
+		
 		for (Class<?> aSuperInterface : theInterface.getInterfaces()) {
 			generateMethods(aSuperInterface, thePool, theCtClass);
 
@@ -157,6 +180,7 @@ public class InstanceGenerator {
 	 */
 	private static <T> void generateMethods(final Class<T> theInterface, final ClassPool thePool, final CtClass theClass) throws CannotCompileException, NotFoundException {
 		Map<String, Class> aProps = properties(theInterface);
+
 		for (String aProp : aProps.keySet()) {
 			CtField aNewField = new CtField(thePool.get(aProps.get(aProp).getName()), aProp, theClass);
 
@@ -244,21 +268,28 @@ public class InstanceGenerator {
 		Map<String, Class> aMap = new HashMap<String, Class>();
 
 		for (Method aMethod : theClass.getDeclaredMethods()) {
-			// we want to ignore methods with implementations, we should not override them.
-			if (!Modifier.isAbstract(aMethod.getModifiers())) {
+			FINDER.method = aMethod;
+			if (find(processedMethods, FINDER)) {
 				continue;
 			}
-			
-			if (!aMethod.getName().startsWith("get")
-				&& !aMethod.getName().startsWith("is")
-				&& !aMethod.getName().startsWith("has")
-				&& !aMethod.getName().startsWith("set")) {
-				throw new IllegalArgumentException("Non-bean style methods found, implementations for them cannot not be generated");
+
+			// we want to ignore methods with implementations, we should not override them.
+			if (!Modifier.isAbstract(aMethod.getModifiers())) {
+				processedMethods.add(aMethod);
+				continue;
 			}
 
 			String aProp = aMethod.getName().substring(aMethod.getName().startsWith("is") ? 2 : 3);
 
 			aProp = String.valueOf(aProp.charAt(0)).toLowerCase() + aProp.substring(1);
+
+			if (!aMethod.getName().startsWith("get")
+				&& !aMethod.getName().startsWith("is")
+				&& !aMethod.getName().startsWith("has")
+				&& !aMethod.getName().startsWith("set")) {
+
+				throw new IllegalArgumentException("Non-bean style methods found, implementations for them cannot not be generated.  Method was: " + aMethod);
+			}
 
 			Class aType = null;
 
@@ -272,8 +303,49 @@ public class InstanceGenerator {
 			if (aType != null) {
 				aMap.put(aProp, aType);
 			}
+
+			processedMethods.add(aMethod);
 		}
 
 		return aMap;
+	}
+
+	private static final FinderPredicate FINDER = new FinderPredicate();
+
+	private static class FinderPredicate implements Predicate<Method> {
+		Method method;
+
+		public boolean accept(final Method theValue) {
+			return overrideEquals(theValue, method);
+		}
+	}
+
+	/**
+	 * Basically a copy of Method.equals, but rather than enforcing a strict equals, it tests for "overridable" equals.  So this will
+	 * return true if the methods are .equals or if the second method can override the first.
+	 * @param obj
+	 * @param other
+	 * @return
+	 */
+	private static boolean overrideEquals(Method obj, Method other) {
+		if ((other.getDeclaringClass().isAssignableFrom(obj.getDeclaringClass())) && (obj.getName().equals(other.getName()))) {
+			if (!obj.getReturnType().equals(other.getReturnType())) {
+				return false;
+			}
+
+			Class[] params1 = obj.getParameterTypes();
+			Class[] params2 = other.getParameterTypes();
+			if (params1.length == params2.length) {
+				for (int i = 0; i < params1.length; i++) {
+					if (params1[i] != params2[i])
+						return false;
+				}
+			}
+			
+			return true;
+		}
+		else {
+			return false;
+		}
 	}
 }
