@@ -21,8 +21,14 @@ Empire 0.7 (TBD)
 	* ADDED: Added support to automatically "infer" RdfProperty annotations when they are not present.  When flag in EmpireOptions is enabled, RdfGenerator
 			 will try to map all fields of a bean, regardless of whether or not RdfProperty annotation is present or not.  Transient annotations can
 			 'hide' these fields from being mapped.  This is more inline with how normal JPA implementations work. (issue #19)
+	* ADDED: Simple cache to support reflection which increases performance of the serialization/deserialization into and out of Java.
+	* FIXED: Bug where global configuration information was not being passed through to the individual unit configurations
 	* FIXED: Several issues with the SPARQL endpoint data source implementation
 	* FIXED: Bug in InstanceGenerator where the class/interface hierarchy was not being used to generate the bytecode resulting in AbstractMethodError's (issue #38)
+	* FIXED: Upgraded to Javassist 3.14.0 and altered how proxies are created when objects are constructed.  This solves both the PermGen OutOfMemory error 
+	         regarding a bug in Javassist and resolves a significant memory leak within RdfGenerator.
+	* FIXED: Bug in BNode detection for building and using them as primary keys for instances
+	* FIXED: Bug in InstanceGenerator to allow creating instances of abstract classes
 	* REMOVED: Global flag in EmpireOptions for handling proxying, this is now completely controlled via JPA annotations
 
 Empire 0.6.6 (2010-07-08)
